--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,19 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - /home/diego/Documents/postgres-data:/var/lib/postgresql/data
+    #  - /home/diego/Documents/postgres-data:/var/lib/postgresql/data
+    - ./create_bank_db_test.sh:/docker-entrypoint-initdb.d/create_bank_db_test.sh
+    networks:
+      - bank-network
+      
+  bank-postgres-test:
+    image: postgres:14.1
+    environment:
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+      - POSTGRES_DB=bank_db_test
+    ports:
+      - "5432:5432"
     networks:
       - bank-network
 
